k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend
  namespace: devops-qr-code
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend 
        image: richman100/devops-qr-code-api:1.0
        ports:
        - containerPort: 8000
