k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: frontend
  namespace: devops-qr-code
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: richman100/front-end:1.0
          ports:
            - containerPort: 3000
